--- a/src/manifest.json
+++ b/src/manifest.json
@@ -30,7 +30,7 @@
     "en": "Character count plug-in"
   },
   "description": {
-    "en": "This sample code counts the total number of characters in a text field. Spaces in the text field are excluded from the count. The final count value is set into a number field."
+    "en": "This sample code counts the total number of characters in a text area field. Spaces in the text area field are excluded from the count. The final count value is set into a number field."
   },
   "homepage_url": {
     "en": "https://developer.kintone.io/hc/en-us/articles/115008120767"
